@@ -1,3 +1,7 @@
+2013-10-22  Sterling Augustine  <saugustine@google.com>
+
+	* gdb/gdb-index.h: Merge from gdb tree.
+
 2013-10-10  Sean Keys <skeys@ipdatasys.com>
 
 	* xgate.h : Cleanup after opcode
